--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,4 @@
 <div id="map" style="height: 100vh; width: 100%; margin: 0;"></div>
+<button id="locate-button" (click)="centerToUserLocation()" style="position: absolute; bottom: 20px; right: 20px; z-index: 1000;">
+
+  </button>
