--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,16 @@
-<div id="map" style="height: 100vh; width: 100%; margin: 0;"></div>
+<div id="map" style="height: 100vh; width: 100%; margin: 0 !important;"></div>
+
+<!-- Locate button -->
 <button id="locate-button" (click)="centerToUserLocation()" style="position: absolute; bottom: 20px; right: 20px; z-index: 1000; border: 0; background: transparent;">
     <i class="fa-solid fa-location-crosshairs" style="font-size: 2.5rem;"></i>
 </button>
+
+<!-- Map style selector -->
+<div class="map-style-container">
+    <select class="map-style-selector" (change)="changeMapStyle($event)">
+      <option *ngFor="let style of mapStyles" [value]="style.style">
+        {{ style.name }}
+      </option>
+    </select>
+  </div>
+  
