added new map styles, updated map style versions, added searchbox with geocoding and css included for it

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,5 +1,12 @@
 <div id="map" style="height: 100vh; width: 100%; margin: 0 !important;"></div>
 
+<!-- Top header for app logo -->
+<header class="app-header">
+    <div class="logo">
+      <h1><span style="color: rgb(144, 6, 6);">Go</span>-Out</h1>
+    </div>
+  </header>
+
 <!-- Locate button -->
 <button id="locate-button" (click)="centerToUserLocation()" style="position: absolute; bottom: 20px; right: 20px; z-index: 1000; border: 0; background: transparent;">
     <i class="fa-solid fa-location-crosshairs" style="font-size: 2.5rem;"></i>
