--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,3 +1,37 @@
+/* Import Roboto font */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+/* Global font styling */
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  /* Header styling */
+.app-header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 254, 0.3);
+    width: 100%;
+    color: #333; /* Dark text for contrast */
+    padding: 0.8rem 20px;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for professional look */
+  }
+
+  .app-header .logo h1 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin: 0;
+  }
+
 /* Container styling for the dropdown */
 .map-style-container {
     position: absolute;
@@ -5,7 +39,7 @@
     left: 20px;
     z-index: 1000;
     background: rgba(255, 255, 255, 0.9);
-    border-radius: 8px;
+    border-radius: 10%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
   
@@ -15,7 +49,7 @@
     padding: 8px 12px;
     font-size: 1rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 10%;
     background: #f9f9f9;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     cursor: pointer;
