--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,5 +1,6 @@
 /* Import Roboto font */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import '~@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css';
 
 /* Global font styling */
 body {
