--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -5,7 +5,7 @@
 /* Global font styling */
 body {
     font-family: 'Roboto', sans-serif;
-    margin: 0;
+    margin: 0 !important;
     padding: 0;
     box-sizing: border-box;
   }
