fixed margin issue in prod build

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -3,7 +3,7 @@
 <!-- Top header for app logo -->
 <header class="app-header">
     <div class="logo">
-      <h1><span style="color: rgb(144, 6, 6);">Go</span>-Out</h1>
+      <h1><span style="color: rgb(144, 6, 6);">G</span>O</h1>
     </div>
   </header>
 
