--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -15,10 +15,10 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(255, 255, 254, 0.2);
-    width: 10%;
+    /* background-color: rgba(255, 255, 254, 0.2); */
+    width: auto;
     color: #333; /* Dark text for contrast */
-    padding: 0.8rem 20px;
+    padding: 0.8rem 0.5rem;
     z-index: 1000;
     display: flex;
     align-items: center;
